syntax = "proto3";

package eu.surething_project.core;

option java_multiple_files = true;
option java_package = "eu.surething_project.core.grpc";
option java_outer_classname = "LocProofProto";

import "google/protobuf/any.proto";
import "loc_time.proto";
import "signature.proto";

// Location Certificate generated by the verifier for a successful verification of a prover's location claim
message LocationProof {
	// verifier unique id
	string verifierId = 1;
	// the original location claim of the prover
	string claimId = 2;
	// time of verification - in one of alternative time schemas
	Time time = 4;
	// type of the evidence
	string evidenceType = 5;
	// verification evidence
	google.protobuf.Any evidence = 6;
}

// A location certificate is a verified location claim, optionally supported by endorsements
message SignedLocationProof {
	LocationProof verification = 1;
	Signature verifierSignature = 2;
}